# Parse-math-expression

./: .gitignore  Bd_td.hpp  CMakeLists.txt  LICENSE.md  LICENSErus.md  MathEnums.hpp  MathExpression.hpp  MathExpressionErrors.hpp  MathPars.hpp  MathParse.hpp  ParseMath.hpp  ParseUtils.hpp  README.md  README.txt  READMErus.md  USAGE.md  USAGErus.md  bd.td  func_dict.td  main.cpp
FileHeaders/: FileReader.hpp
MathWorker/: MathWorker.hpp
Mather/: BaseClasses.hpp  Expression.hpp  MathConverter.hpp  MathUtils.hpp  PostfixFunction.hpp  StandartFunction.hpp  TwoPramFunction.hpp  Value.hpp  Variable.hpp
Parser/: EquationParser.hpp  MathParamParser.hpp  MathParser.hpp  ParseUtils.hpp  ParserException.hpp  PolinomParser.hpp
Polinomial/: Fraction.hpp  Monimial.hpp  PolinomExpression.hpp  PolinomUtils.hpp  Polinomial.hpp  SquareMatrix.hpp  Variable.hpp
